# l10n-finland

./: .copier-answers.yml  .pre-commit-config.yaml  .travis.yml  README.md  README.rst  __init__.py  __manifest__.py  __openerp__.py  oca_dependencies.txt  res_partner.py
data/: account.account.template.csv  account.account.type.csv  account.chart.template.csv  account.tax.code.template.csv  account.tax.template.csv  payment_terms_finnish.xml  res_partner_id_category.xml
i18n/: fi.po
l10n_fi/: README.rst  __openerp__.py
l10n_fi/data/: account.tax.code.template.csv
l10n_fi_banks/: README.rst  __manifest__.py  __openerp__.py
l10n_fi_banks/data/: res_bank.xml
l10n_fi_banks/i18n/: fi.po
l10n_fi_banks/readme/: CONTRIBUTORS.md  DESCRIPTION.rst  HISTORY.md  HISTORY.rst
l10n_fi_business_code/: README.rst  __init__.py  __manifest__.py
l10n_fi_business_code/data/: res_partner_id_category.xml
l10n_fi_business_code/i18n/: fi.po  l10n_fi_business_code.pot
l10n_fi_business_code_validate/: README.rst  __manifest__.py
l10n_fi_edicode/: README.rst  __init__.py  __manifest__.py  __openerp__.py
l10n_fi_liikekirjuri/: __openerp__.py
l10n_fi_payment_reference/: README.rst  __manifest__.py
l10n_fi_payment_terms/: README.rst  __manifest__.py  __openerp__.py
l10n_fi_reconcile/: README.rst  __manifest__.py
l10n_fi_sale_refund_payment_reference/: README.rst  __manifest__.py
models/: __init__.py  res_partner.py  res_partner_id_category.py  res_partner_operator_einvoice.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
views/: res_partner.xml
(+116 files in other folders)
