[project]
name = "odoo-addons-oca-l10n-finland"
version = "17.0.20240206.0"
dependencies = [
    "odoo-addon-l10n_fi_edicode>=17.0dev,<17.1dev",
    "odoo-addon-l10n_fi_sale_refund_payment_reference>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
